--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
                   android:label="Popular Movie Settings" >
 
         </activity>
-        <activity
+        <activity android:configChanges="orientation|screenSize"
             android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
@@ -22,7 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
+        <activity android:configChanges="orientation|screenSize"
             android:name=".MovieDetailActivity"
             android:label="@string/title_activity_movie_detail"
             android:parentActivityName=".MainActivity" >
